2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Cosmetical fixes.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Use AM_CPPFLAGS instead of INCLUDES.

2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_TOP(../..).

2002-07-01    Joel Sherrill <joel@OARcorp.com>

	* Mega patch merge to change the format of the object IDs to
	loosen the dependency between the SCORE and the various APIs.
	There was considerable work to simplify the object name management
        and it appears that the name_table field is no longer needed.
	This patch also includes the addition of the internal mutex
	which is currently only used to protect some types of allocation
	and deallocation.  This significantly can reduce context 
	switch latency under certain circumstances.  In particular,
	some heap/region operations were O(n) and had dispatching
	disabled.  This should help enormously.  With this merge,
	the patch is not as clean as it should be.  In particular,
	the documentation has not been modified to reflect the new object
	ID layout, the IDs in the test screens are not updated, and
	_Objects_Get_information needs to be a real routine not inlined.
	As part of this patch a lot of MP code for thread/proxy blocking
	was made conditional and cleaned up.
	* src/cre_mbf.c, src/cre_sem.c, src/eventflags.c, src/fmempool.c,
	src/itronsem.c, src/mbox.c, src/msgbuffer.c, src/port.c, src/task.c,
	src/vmempool.c:  Modified as part of above.
2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
